<resources>
    <string name="app_name">Google Translate Example</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_about">About</string>
    <string name="action_buy">Buy</string>
    <string name="action_exit">Exit</string>

    <string name="action_username">User Name</string>
    <string name="action_bio">BIO</string>
    <string name="action_tags">Tags</string>
    <string name="action_settings">Settings</string>
    <string name="action_translate">Translate</string>

    <string name="about_dialog_title">About</string>
    <string name="about_dialog_text">Laboratory work#1\nAuthor: Nazarova Elena\nGroup: 6122M\nUniversity: SSAU/SNIU</string>
    <string name="ok_button_text">OK</string>

    <string name="exit_dialog_title">Exit Confirmation</string>
    <string name="exit_dialog_text">Are you sure want to exit?</string>
    <string name="yes_button_text">Yes</string>
    <string name="no_button_text">No</string>

    <string name="buy_product_text">Ok, just give me a dollar</string>


    <!-- Strings related to Settings -->
    <string name="settings_general">General</string>
    <string name="settings_sound">Sound</string>
    <string name="settings_default_sound">Default sound la la la</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_color">Color</string>
    <string name="settings_advertisement">Advertisement</string>
    <string name="settings_instant_buy">Instant buy</string>
    <string name="settings_today">Today</string>
    <string name="settings_">No</string>
    <string name="settings_enter_sound">Enter your favourite sound</string>
    <string name="settings_enter_date">Enter date</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="divider">\t</string>

    <string name="new_note">New note</string>
    <string name="add_notes">Add some notes here</string>
    <string name="news">Some cool news everyone!</string>
    <string name="inner_text">To my mind, the best Android apps exel in two areas: excellence and elegance. An excellent app provides something that no other app can.</string>
    <string name="adv">Advertisement from Haulmont</string>
    <string name="adv_inner">Do you want to use the best full stack application Framework?</string>
    <string name="buy">Buy</string>
    <string name="share">Share using</string>
    <string name="title_activity_google_translate">GoogleTranslateActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="action_example">Example action</string>

    <!-- Google Translate Example strings -->
    <string name="google">Google</string>
    <string name="translate">Translate</string>
    <string name="gt_adv_title_part1">NEW</string>
    <string name="gt_adv_title_part2">Tab to Translate</string>
    <string name="gt_adv_inner">Now Google Translate works in any app</string>
    <string name="gt_adv_last">TAKE A TOUR</string>
    <string name="gt_my_note">дерево</string>
    <string name="gt_text_input">Tab to enter text</string>
    <string name="gt_lan_en">English</string>
    <string name="gt_lan_po">Polish</string>
    <string name="gt_lan_ru">Russian</string>
    <string name="gt_phrasebook">Phrasebook</string>
    <string name="gt_sms">SMS translation</string>
    <string name="gt_offline">Offline translation</string>
    <string name="gt_feedback">Help &amp; feedback</string>
    <!-- / Google Translate Example strings -->

    <string-array name="languages">
        <item>English</item>
        <item>Polish</item>
        <item>Russian</item>
    </string-array>
    <string name="title_activity_for_settings_fragment">ForSettingsFragmentActivity</string>


</resources>
