<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_height="match_parent"
                      android:layout_width="match_parent"
                      android:title="@string/title_activity_settings">

        <PreferenceCategory
            android:title="@string/gt_adv_last"
            android:key="pref_key_storage_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <CheckBoxPreference
                android:key="pref_key_auto_delete"
                android:summary="@string/gt_adv_title_part2"
                android:title="@string/gt_adv_title_part1"
                android:defaultValue="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Preference
                android:key="pref_key_sms_delete_limit"
                android:dependency="pref_key_auto_delete"
                android:summary="@string/gt_lan_en"
                android:title="@string/gt_lan_po"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Preference
                android:key="pref_key_mms_delete_limit"
                android:dependency="pref_key_auto_delete"
                android:summary="@string/gt_offline"
                android:title="@string/gt_my_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </PreferenceCategory>
</PreferenceScreen>