<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/settings_advertisement">

        <CheckBoxPreference
            android:key="checkbox_preference"
            android:title="@string/settings_color"
            android:summary="@string/settings_general" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_sound">

        <EditTextPreference
            android:key="edittext_preference"
            android:title="@string/settings_default_sound"
            android:summary="@string/settings_instant_buy"
            android:dialogTitle="@string/settings_default_sound" />

        <!--<ListPreference
            android:key="list_preference"
            android:title="@string/action_username"
            android:summary="@string/yes_button_text"
            android:entries="@array/entries_list_preference"
            android:entryValues="@array/entryvalues_list_preference"
            android:dialogTitle="@string/about_dialog_text" />-->

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_title_vibrate">

        <!-- This PreferenceScreen tag sends the user to a new fragment of
             preferences.  If running in a large screen, they can be embedded
             inside of the overall preferences UI. -->
        <PreferenceScreen
            android:fragment="com.lena.googletranslateexample.SimpleSettingsActivity$Prefs1FragmentInner"
            android:title="@string/settings_instant_buy"
            android:summary="@string/pref_ringtone_silent">
            <!-- Arbitrary key/value pairs can be included for fragment arguments -->
            <extra android:name="someKey" android:value="somePrefValue" />
        </PreferenceScreen>

        <!-- This PreferenceScreen tag sends the user to a completely different
             activity, switching out of the current preferences UI. -->
        <PreferenceScreen
            android:title="@string/settings_color"
            android:summary="@string/pref_title_vibrate">

            <intent android:action="android.intent.action.VIEW"
                    android:data="http://www.android.com" />

        </PreferenceScreen>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/action_username">

        <CheckBoxPreference
            android:key="parent_checkbox_preference"
            android:title="@string/settings_color"
            android:summary="@string/settings_instant_buy"
            android:defaultValue="true"/>

        <!-- The visual style of a child is defined by this styled theme attribute. -->
        <CheckBoxPreference
            android:key="child_checkbox_preference"
            android:dependency="parent_checkbox_preference"
            android:layout="?android:attr/preferenceLayoutChild"
            android:title="@string/pref_title_social_recommendations"
            android:summary="@string/action_exit" />

    </PreferenceCategory>

</PreferenceScreen>