<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_phrasebook"
            android:icon="@drawable/ic_stars_black_24px"
            android:title="@string/gt_phrasebook"/>
        <item
            android:id="@+id/nav_sms"
            android:icon="@android:drawable/stat_notify_chat"
            android:title="@string/gt_sms"/>
        <item
            android:id="@+id/nav_offline"
            android:icon="@drawable/ic_cloud_off_black_24px"
            android:title="@string/gt_offline"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings"/>
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_help_black_24px"
            android:title="@string/gt_feedback"/>
    </group>
</menu>
