<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:title="@string/title_activity_settings">

    <PreferenceCategory
        android:title="@string/gt_adv_last"
        android:key="pref_key_storage_settings">
        <CheckBoxPreference
            android:key="parent_pref"
            android:summary="@string/gt_adv_title_part2"
            android:title="@string/gt_adv_title_part1"
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:key="pref_key_auto_delete"
            android:dependency="parent_pref"
            android:layout="?android:attr/preferenceLayoutChild"
            android:summary="Explore beyond"
            android:title="exstra galactic"
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:key="pref_key_sms_delete_limit"
            android:dependency="pref_key_auto_delete"
            android:summary="gude explorers"
            android:title="guide"/>
        <CheckBoxPreference
            android:key="pref_key_mms_delete_limit"
            android:dependency="pref_key_auto_delete"
            android:summary="galactic citizen"
            android:title="citixen"/>
    </PreferenceCategory>

    <!--<PreferenceCategory android:title="Galactic Identif" >
        <EditTextPreference
            android:key="name_preference"
            android:title="Galactic Name"
            android:summary="whats u Galactic Name?"
            android:dialogTitle="Enter ur Galactic Name"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="Using intent">
        <PreferenceScreen android:title="Headers Preference"
            android:summary="use intent to see headers">
            <intent android:targetPackage="com.lena.googletranslateexample"
                    android:targetClass="com.lena.googletranslateexample.HeadersActivity"/>
        </PreferenceScreen>
    </PreferenceCategory>-->

</PreferenceScreen>